# smart_home_zephyr

./: .gitignore  IMPLEMENTATION_NOTES.md  README.md
.github/workflows/: build.yml  docs.yml
hardware/: README.md
software/: .gitignore  Kconfig  README.md  make.sh  west.yml
software/app/: BUILD.sh  CMakeLists.txt  Kconfig  MQTT_CONFIG.md  WIFI_CONFIG.md  debug.conf  minimal.conf  mqtt_conf.template  mqtt_config.conf.template  prj.conf  prj_cpunet.conf  prj_nrf5340_app.conf  prj_nrf5340_net.conf  sample.yaml  voice.conf  wifi_config.conf  wifi_config.conf.template
software/app/boards/: esp32_devkitc.overlay  esp32_devkitc_wroom.overlay  nrf5340dk.overlay  nrf5340dk_cpunet.overlay
software/app/scripts/: build_nrf5340.sh  flash_nrf5340.sh  monitor_nrf5340.sh
software/app/src/: app_core.cpp  cpp_support.cpp  main.c  main.cpp  net_core.c  voice_integration.cpp
software/app/src/app_core/: app_core.cpp  app_core.hpp  app_log.h  cpp_support.cpp
software/app/src/core/: Module.hpp  Service.hpp
software/app/src/menu/: menu.cpp  menu.hpp  menu_manager.cpp  menu_manager.hpp
software/app/src/modules/ble/: ble_module.c  ble_module.h  bleservice.cpp  bleservice.hpp
software/app/src/modules/blink/: blink_module.c  blink_module.h  blinkmodule.cpp  blinkmodule.hpp
software/app/src/modules/button/: button_module.c  button_module.h  buttonmodule.cpp  buttonmodule.hpp
software/app/src/modules/display/: display_module.c  display_module.h  displaymodule.cpp  displaymodule.hpp
software/app/src/modules/i2s_mic/: CMakeLists.txt  i2s_mic_module.cpp  i2s_mic_module.hpp
software/app/src/modules/matter/: app_task.cpp  app_task.hpp  light_endpoint.cpp  light_endpoint.hpp
software/app/src/modules/mqtt/: CMakeLists.txt  mqttmodule.cpp  mqttmodule.hpp
software/app/src/modules/ota/: CMakeLists.txt  otamodule.cpp  otamodule.hpp
software/app/src/modules/sensor/: sensor_module.c  sensor_module.h  sensormodule.cpp  sensormodule.hpp
software/app/src/modules/uart/: uartmodule.cpp  uartmodule.hpp
software/app/src/modules/wakeword/: CMakeLists.txt  IMPLEMENTATION.md  MODEL_MANAGEMENT.md  README.md  model_data.h.example  model_data_template.h  model_loader.hpp  wakeword_module.cpp  wakeword_module.hpp
software/app/src/modules/wifi/: wifi_module.c  wifi_module.h  wifiservice.cpp  wifiservice.hpp
software/app/src/net_core/: net_core.cpp  net_core.hpp
software/app/src/sdk/hw/button/: button_manager.cpp  button_manager.hpp
software/app/src/sdk/hw/uart/: uart_manager.cpp  uart_manager.hpp
software/app/src/sdk/ipc/: ipc_core.cpp  ipc_core.hpp
software/app/src/sdk/protocol/ble/: ble_manager.cpp  ble_manager.hpp
software/app/src/sdk/protocol/matter/: app_task.cpp  app_task.hpp  chip_config.hpp  commissioning_delegate.cpp  commissioning_delegate.hpp  light_endpoint.cpp  light_endpoint.hpp
software/app/src/sdk/protocol/matter/commission/: chip_config.hpp  commissioning_delegate.cpp  commissioning_delegate.hpp
software/app/src/sdk/protocol/matter/control_app/: app_task.cpp  app_task.hpp  app_task_phase0.cpp  app_task_phase1.cpp  app_task_phase2.cpp  app_task_phase3.cpp  app_task_phase4.cpp  app_task_phase5.cpp  app_task_phase6.cpp
software/app/src/sdk/protocol/matter/light_endpoint/: light_endpoint.cpp  light_endpoint.hpp
software/app/src/sdk/protocol/radio/: radio_manager.cpp  radio_manager.hpp
software/app/src/sdk/protocol/thread/: network_resilience_manager.cpp  network_resilience_manager.hpp  thread_network_manager.cpp  thread_network_manager.hpp
software/app/src/sdk/services/wakeword/: model_loader.cpp  model_loader.hpp
software/app/src/state_machine/: state.hpp  statemachine.cpp  statemachine.hpp
software/app/src/state_machine/states/: idle_state.cpp  listenning_state.cpp  sleep_state.cpp  wake_state.cpp
software/app/src/thread/: ble_task.c  ble_task.cpp  ble_task.h  blink_task.c  blink_task.cpp  blink_task.h  display_task.c  display_task.cpp  display_task.h  mqtt_task.cpp  mqtt_task.h  sensor_task.c  sensor_task.cpp  sensor_task.h  uart_task.cpp  uart_task.h  wifi_task.c  wifi_task.cpp  wifi_task.h
software/doc/: Doxyfile  architecture.rst  ble_service.rst  conf.py  index.rst  inter_thread_comm.rst  requirements.txt  voice_system.rst  wifi_service.rst
software/doc/_doxygen/: main.md
software/doc/_static/: .gitkeep  custom.css
software/doc/diagrams/: directory_structure.puml  dual_core_architecture.puml  ipc_communication.puml  namespace_hierarchy.puml  namespace_hierarchy_v2.puml
software/scripts/: attach-esp32.ps1  attach-esp32.sh  build.sh  fix-python.sh  flash.sh  lib.sh  monitor.sh  setup.sh
